--- a/css/custom.css
+++ b/css/custom.css
@@ -27,12 +27,19 @@ a:hover,a:focus{ text-decoration: none}
     -ms-transition: all 0.4s ease;
 }
 
+.btn.know_btn2{
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+}
 /* Header */
 
 
 /*Preloader css*/
 #loading{
-    background-color: #5858FA;
+    background-color: #004791;
     height: 100%;
     width: 100%;
     position: fixed;
@@ -134,7 +141,7 @@ a:hover,a:focus{ text-decoration: none}
 
 /* Top Nav */
 .top_nav {
-    background: #5858FA none repeat scroll 0 0;
+    background: #004791 none repeat scroll 0 0;
     overflow: hidden;
     padding: 10px 0;
 }
@@ -185,7 +192,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     margin: 5px -10px 0 0;
 }
 .attr-nav > ul > li > a {
-    color: #5858FA;
+    color: #004791;
     font-size: 20px;
 }
 .attr-nav > ul > li > a:hover,.attr-nav > ul > li > a:focus {
@@ -223,7 +230,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     margin-bottom:20px;
 }
 .carousel-caption h1.second_heading {
-    color:#5858FA;
+    color:#004791;
     margin-bottom:35px;
 }
 .carousel-caption > h3 {
@@ -239,14 +246,16 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     line-height: 28px;
 }
 .btn.know_btn {
-    background: #5858FA none repeat scroll 0 0;
+    
+
+    background: transparent;
+    color:#004791;
+    border:1px solid #004791;
     border-radius: 30px;
-    color: #fff;
     font-family: "futura_ltbold",sans-serif;
     font-size: 16px;
     padding: 10px 20px;
     text-transform: uppercase;
-    border:1px solid transparent;
 }
 .carousel-caption .btn.know_btn {
     margin-top: 64px;
@@ -256,11 +265,28 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 }
 .btn.know_btn:hover,
 .btn.know_btn:focus {
-    background: transparent;
-    color:#5858FA;
-    border:1px solid #5858FA;
+    background: #004791 none repeat scroll 0 0;
+    color: #fff;
+    border:1px solid transparent;
 }
 
+.btn.know_btn2 {
+    background: #004791 none repeat scroll 0 0;
+    color: #fff;
+    border:1px solid transparent;
+    border-radius: 30px;
+    font-family: "futura_ltbold",sans-serif;
+    font-size: 16px;
+    padding: 10px 20px;
+    text-transform: uppercase;
+}
+
+.btn.know_btn2:hover,
+.btn.know_btn2:focus {
+    background: transparent;
+    color:#004791;
+    border:1px solid #004791;
+}
 
 
 
@@ -280,7 +306,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 .about_content > h2 {
     font-size: 40px;
     margin: 90px 0 15px;
-    color:#5858FA;
+    color:#004791;
 }
 .about_content > h3 {
     font-size: 30px;
@@ -314,7 +340,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 .why_us_item{ padding-top: 55px;}
 #why_us .fa{
     border-radius: 100%;
-    box-shadow: 0 0 0 10px #5858FA, 0 0 0 20px rgba(88, 88, 250, 0.712), 0 0 0 30px rgba(88, 88, 250, 0.452);
+    box-shadow: 0 0 0 10px #004791, 0 0 0 20px #0046918f, 0 0 0 30px #0046913b;
     padding: 38px;
     font-size:45px;
 }
@@ -345,7 +371,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     background-size:cover;
     position:relative;
     padding-bottom: 102px;
-    border-bottom:2px solid #5858FA;
+    border-bottom:2px solid #004791;
 }
 #portfolio::before{
     position:absolute;
@@ -419,7 +445,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 }
 .grid-item:hover .portfolio_hover_area {opacity: 1;}
 .portfolio_hover_area .fa {
-    background: #5858FA none repeat scroll 0 0;
+    background: #004791 none repeat scroll 0 0;
     border: 2px solid transparent;
     border-radius: 5px;
     border-radius: 5px;
@@ -439,9 +465,9 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 }
 .portfolio_hover_area > a:first-child{  margin-right: 10px;}
 .portfolio_hover_area .fa:hover{
-    border:1px solid #5858FA;
+    border:1px solid #004791;
     background:transparent;
-    color:#5858FA;
+    color:#004791;
 }
 
 /* Testimonial */
@@ -504,7 +530,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     padding-bottom: 70px;
 }
 .testimonial_item:hover .testimonial_content {
-    background: #5858FA none repeat scroll 0 0;
+    background: #004791 none repeat scroll 0 0;
 }
 .testimonial_item:hover .testimonial_content::after {
     width: 22px;
@@ -539,7 +565,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 }
 #contact_form .second_heading {
     font-size: 40px;
-    font-family: "futura_ltbook",sans-serif;
+    /*font-family: "futura_ltbook",sans-serif;*/
     margin:8px 0;
 }
 #contact_form form.form-inline {
@@ -560,8 +586,8 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     resize:none;
 }
 #contact_form .form-control:focus {
-    border: 2px solid #5858FA;
-    box-shadow: 0px 0px 5px 1px #5858FA;
+    border: 2px solid #004791;
+    box-shadow: 0px 0px 5px 1px #004791;
 }
 #contact_form .btn.submit_btn {
     background: #73757e none repeat scroll 0 0;
@@ -630,7 +656,7 @@ footer::after {
     margin: 32px 0 0;
 }
 .footer_social_icon .fa {
-    background: #5858FA none repeat scroll 0 0;
+    background: #004791 none repeat scroll 0 0;
     border-radius: 100%;
     color: #222;
     font-size: 20px;
@@ -696,7 +722,7 @@ footer::after {
     margin-top:55px;
 }
 .footer_bottom a {
-    color: #5858FA;
+    color: #004791;
 }
 .footer_bottom a:hover,.footer_bottom a:focus {
     color: #d7a300;
