--- a/css/custom.css
+++ b/css/custom.css
@@ -39,7 +39,7 @@ a:hover,a:focus{ text-decoration: none}
 
 /*Preloader css*/
 #loading{
-    background-color: #004791;
+    background-color: #2E64FE;
     height: 100%;
     width: 100%;
     position: fixed;
@@ -141,7 +141,7 @@ a:hover,a:focus{ text-decoration: none}
 
 /* Top Nav */
 .top_nav {
-    background: #004791 none repeat scroll 0 0;
+    background: #2E64FE none repeat scroll 0 0;
     overflow: hidden;
     padding: 10px 0;
 }
@@ -192,7 +192,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     margin: 5px -10px 0 0;
 }
 .attr-nav > ul > li > a {
-    color: #004791;
+    color: #2E64FE;
     font-size: 20px;
 }
 .attr-nav > ul > li > a:hover,.attr-nav > ul > li > a:focus {
@@ -230,7 +230,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     margin-bottom:20px;
 }
 .carousel-caption h1.second_heading {
-    color:#004791;
+    color:#2E64FE;
     margin-bottom:35px;
 }
 .carousel-caption > h3 {
@@ -249,8 +249,8 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     
 
     background: transparent;
-    color:#004791;
-    border:1px solid #004791;
+    color:#2E64FE;
+    border:1px solid #2E64FE;
     border-radius: 30px;
     font-family: "futura_ltbold",sans-serif;
     font-size: 16px;
@@ -265,13 +265,13 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 }
 .btn.know_btn:hover,
 .btn.know_btn:focus {
-    background: #004791 none repeat scroll 0 0;
+    background: #2E64FE none repeat scroll 0 0;
     color: #fff;
     border:1px solid transparent;
 }
 
 .btn.know_btn2 {
-    background: #004791 none repeat scroll 0 0;
+    background: #2E64FE none repeat scroll 0 0;
     color: #fff;
     border:1px solid transparent;
     border-radius: 30px;
@@ -284,8 +284,8 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 .btn.know_btn2:hover,
 .btn.know_btn2:focus {
     background: transparent;
-    color:#004791;
-    border:1px solid #004791;
+    color:#2E64FE;
+    border:1px solid #2E64FE;
 }
 
 
@@ -306,7 +306,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 .about_content > h2 {
     font-size: 40px;
     margin: 90px 0 15px;
-    color:#004791;
+    color:#2E64FE;
 }
 .about_content > h3 {
     font-size: 30px;
@@ -340,7 +340,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 .why_us_item{ padding-top: 55px;}
 #why_us .fa{
     border-radius: 100%;
-    box-shadow: 0 0 0 10px #004791, 0 0 0 20px #0046918f, 0 0 0 30px #0046913b;
+    box-shadow: 0 0 0 10px #2E64FE, 0 0 0 20px #2e64fe69, 0 0 0 30px #0046913b;
     padding: 38px;
     font-size:45px;
 }
@@ -371,7 +371,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     background-size:cover;
     position:relative;
     padding-bottom: 102px;
-    border-bottom:2px solid #004791;
+    border-bottom:2px solid #2E64FE;
 }
 #portfolio::before{
     position:absolute;
@@ -445,7 +445,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 }
 .grid-item:hover .portfolio_hover_area {opacity: 1;}
 .portfolio_hover_area .fa {
-    background: #004791 none repeat scroll 0 0;
+    background: #2E64FE none repeat scroll 0 0;
     border: 2px solid transparent;
     border-radius: 5px;
     border-radius: 5px;
@@ -465,9 +465,9 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
 }
 .portfolio_hover_area > a:first-child{  margin-right: 10px;}
 .portfolio_hover_area .fa:hover{
-    border:1px solid #004791;
+    border:1px solid #2E64FE;
     background:transparent;
-    color:#004791;
+    color:#2E64FE;
 }
 
 /* Testimonial */
@@ -530,7 +530,7 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     padding-bottom: 70px;
 }
 .testimonial_item:hover .testimonial_content {
-    background: #004791 none repeat scroll 0 0;
+    background: #2E64FE none repeat scroll 0 0;
 }
 .testimonial_item:hover .testimonial_content::after {
     width: 22px;
@@ -586,8 +586,8 @@ nav.navbar.bootsnav ul.nav > li > a:hover,nav.navbar.bootsnav ul.nav > li > a:fo
     resize:none;
 }
 #contact_form .form-control:focus {
-    border: 2px solid #004791;
-    box-shadow: 0px 0px 5px 1px #004791;
+    border: 2px solid #2E64FE;
+    box-shadow: 0px 0px 5px 1px #2E64FE;
 }
 #contact_form .btn.submit_btn {
     background: #73757e none repeat scroll 0 0;
@@ -656,7 +656,7 @@ footer::after {
     margin: 32px 0 0;
 }
 .footer_social_icon .fa {
-    background: #004791 none repeat scroll 0 0;
+    background: #2E64FE none repeat scroll 0 0;
     border-radius: 100%;
     color: #222;
     font-size: 20px;
@@ -722,7 +722,7 @@ footer::after {
     margin-top:55px;
 }
 .footer_bottom a {
-    color: #004791;
+    color: #2E64FE;
 }
 .footer_bottom a:hover,.footer_bottom a:focus {
     color: #d7a300;
